hide api key, added if statements to index to prevent breaking from missing data

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
   h1= title
   form(name="submit" method="post")
     p API
-    input(name="api")
+    input(type="password" name="api")
     p URL / IP / MD5
     input(name="url")
     p
